# OBSIDIANxPEBBLE

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: NoteModal.tsx  TemplateSelector.tsx  TitleBar.tsx
src/components/fields/: DateField.tsx  ListField.tsx  PriorityField.tsx  ReminderPicker.tsx  RichTextEditor.tsx  ScreenshotArea.tsx  SubjectField.tsx  TagInput.tsx  TitleField.tsx  index.ts
src/components/templates/: MeetingNoteTemplate.tsx  QuickNoteTemplate.tsx  TaskTemplate.tsx  index.ts
src/hooks/: useClipboardPaste.ts  useReminders.ts  useTheme.ts
src/types/: index.ts
