[package]
name = "obsidian-quick-note"
version = "0.1.0"
description = "A quick note-taking app for Obsidian"
authors = ["bjones"]
edition = "2021"

[lib]
name = "obsidian_quick_note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
